# agentic-RAG

./: .gitignore  README.md  pyproject.toml
agentic_rag/: __init__.py  agentic_pipeline.py  answering.py  api.py  chunking.py  cli.py  embeddings.py  evaluation.py  ingestion.py  llm.py  models.py  pipeline.py  policy.py  retrieval.py  vector_store.py
data/: eval_queries.jsonl  evaluation_report.json
samples/: questions.jsonl
samples/knowledge/: it-onboarding.md
tests/: test_pipeline.py  test_retrieval.py
webapp/: index.html  showcase.html
