[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-documentation-assistant"
version = "1.0.0"
description = "Classic RAG pipeline for real documentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "numpy>=1.26",
  "pypdf>=4.3",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "qdrant-client>=1.12",
  "requests>=2.32",
  "sentence-transformers>=3.0",
  "uvicorn[standard]>=0.30",
]

[project.scripts]
rag-docs = "agentic_rag.cli:main"

[tool.setuptools]
packages = ["agentic_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
